--- a/style.css
+++ b/style.css
@@ -2,36 +2,69 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Roboto, 'Courier New', Courier, monospace;
+  font-family: Roboto, "Courier New", Courier, monospace;
+  background: linear-gradient(
+    to right top,
+    #515b68,
+    #273245,
+    #4a6fbe,
+    #0e1a42,
+    #0b0b3d
+  );
+
+  height: 100vh;
 }
 
+h3 {
+  font-weight: 700;
+  font-size: 40px;
+  text-align: center;
+}
 .container {
   width: 60%;
   display: flex;
   justify-content: space-around;
-  margin: 1rem auto;
+  margin: 3rem auto;
   border: 3px solid #f5f5f5;
   background-color: #1b244a;
   color: #eeeeee;
+  border: 2px solid #9aabd8;
+  padding: 1rem;
+  box-shadow: 10px 10px 28px -3px rgba(230, 218, 218, 0.45);
 }
 
+.display {
+  width: 155px;
+  height: 120px;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Black Ops One, sans-serif;
+  color: #f94f6d;
+  font-size: 90px;
+  font-weight: 400;
+}
 
 .add-score {
- display: flex;
- justify-content: space-between;
- align-items: center;
- gap: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 40px;
 }
 
-.one, .two, .three {
- display: flex;
- height: 40px;
- width: 40px;
- border: 2px solid #9AABD8;
- border-radius: 5px;
- align-items: center;
- justify-content: center;
- font-weight: 400;
- font-family: Black Ops One, sans-serif;
- margin-top: 28px;
+.one,
+.two,
+.three {
+  display: flex;
+  height: 40px;
+  width: 40px;
+  border: 2px solid #9aabd8;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  font-family: Black Ops One, sans-serif;
+  margin-top: 28px;
 }
