--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h3 {
   border: 2px solid #9aabd8;
   padding: 1rem;
   box-shadow: 10px 10px 28px -3px rgba(230, 218, 218, 0.45);
+  overflow: hidden;
 }
 
 .display {
@@ -60,6 +61,7 @@ h3 {
   display: flex;
   height: 40px;
   width: 40px;
+  color: #9aabd8;
   border: 2px solid #9aabd8;
   border-radius: 5px;
   align-items: center;
